--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,11 +3,15 @@
 }
 
 /*element selectors */
+a :hover{
+    background-color:#c7a444
+}
+
 body{
     background-color:#011854;
     color:blanchedalmond;
     margin: 0;
-    padding: 24px;
+    padding: 2vw;
 }
  
 h1,
@@ -16,28 +20,41 @@ h3 {
   text-align: center;
 }
 
-ul{
-    list-style-type: none;
+img {
+    width: 100%;
 }
-    
+
+nav {
+    background-color: #A6BBF2;
+    color: #011854;
+    display:flex;
+    flex-direction: row;
+    margin: 0;
+    width:100%;
+}
+nav ul{
+    list-style-type: none;
+    display: flex;
+    margin: 0;
+    padding: 1%; 
+}
+
+nav li {
+    margin: 1vh;
+    text-decoration: none;
+}
+
+nav li :hover {
+    background-color: #f3b37e;
+    margin: 0;
+    padding: 4vh;
+}
 
 /*id selectors */
 
 /*This is for the Nav Bar */
-#navbar{
-    background-color: #A6BBF2;
-    color:#011854;
-    display:flex;
-    flex-direction: row;
-    text-decoration: none;
-    width:100%;
-}
 
 /* class selectors */
-.background-image {
-        background-image:url(field.jpg)
-        background-color:#FFE38F
-}
 .bgc-navy {background-color: navy;}
 .display-inline {display:inline}
         /*review sticky vs fixed*/
@@ -46,7 +63,12 @@ ul{
 .t-0 {top:0;}
 .w-1\/1 {width:100%;}
 
-
-/*review purpose of html inclusion here*/
-html{background-color: blanchedalmond;}
-    
+/* large smartphones */
+@media screen and (max-width: 768px) {
+    ul{
+      flex-direction: column;
+    }
+    li {
+        margin: 0;
+    }
+  }
